# dutyscdp_bot

./: Dockerfile  Makefile  README.md  config.toml  pyproject.toml
charts/dutyscdp-bot/: .helmignore  Chart.yaml  values.yaml
charts/dutyscdp-bot/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: kubernetes.md
dutyscdp_bot/: __init__.py  bot.py  config.py  loop_client.py  main.py  oncall_client.py  server.py  utils.py
tests/: test_bot.py  test_config.py  test_loop_client.py  test_oncall_client.py  test_server.py
